# task-assistant

./: .env.example  .gitignore  BRIEF_tasks_app.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  db.py  main.py  memory.py  models.py  scheduler.py  schemas.py  seed.py  templates_config.py
app/llm/: classifier.py  client.py  proactive.py  prompts.py  router.py
app/routes/: auth.py  conversation.py  fragments.py  settings.py  tasks.py
app/static/js/: keyboard.js
app/templates/: base.html  index.html  login.html  settings.html
app/templates/fragments/: signal.html  task_card.html
data/: tasks.db
docs/superpowers/plans/: 2026-04-15-bugfix-optimistic-ui-rlhf.md
docs/superpowers/specs/: 2026-04-15-bugfix-optimistic-ui-rlhf-design.md
migrations/: env.py
migrations/versions/: 1fea5b89554e_initial_schema.py  378b0cf79297_add_llm_pending_to_tasks.py
tests/: conftest.py  test_classifier.py  test_llm_client.py  test_memory.py  test_proactive.py  test_router.py  test_routes.py  test_scheduler.py  test_schemas.py  test_seed.py  test_settings_route.py  test_task_card.py
